--- a/base.css
+++ b/base.css
@@ -426,6 +426,34 @@ Creates a rectangular container for the boxes
   margin: auto 4%;
 }
 
+.dog-box {
+    margin-left: 0vw;
+    height: 70%;
+}
+
+#dog-img-box {
+  background: #C2DF87;
+  width: 35%;
+  height: 50%;
+  position: absolute;
+  top: 43vh;
+  right: 10vh;
+}
+
+.ear-box {
+    margin-left: 0vw;
+    height: 100%;
+}
+
+#ear-img-box {
+  background: #85AAB2;
+  width: 25%;
+  height: 45%;
+  position: absolute;
+  top: 8vh;
+  left: -20vh;
+}
+
 #star-background {
   height: 40%;
   width: 40%;
@@ -525,53 +553,6 @@ Classes for the sponsor section
   margin-left: 15%;
   margin-right: 12%;
   margin-top: 2%;
-}
-
-
-
-.greenBox {
-  height: 100%;
-  width: 100%;
-  background: linear-gradient(to right, #C2DF87 84.9%, rgba(242, 242, 243, 1) 84.9%);
-  border: 0rem solid white;
-  /* overflow: visible; */
-  display: flex;
-}
-
-#dogImage {
-  height: 100%;
-  width: 85%;
-  margin-left: 6%;
-  margin-top: 3.5%;
-  overflow: hidden;
-
-  border: 0rem solid white;
-  background-image: url(dog.png);
-}
-
-
-.blueBox {
-  position: absolute;
-  top: 19.5%;
-  left: 5.3%;
-  height: 33.2%;
-  width: 16.65%;
-  background: linear-gradient(to right, #85AAB2 100%, white 100%);
-  border: 0rem solid white;
-  /* overflow: visible; */
-  /* display: flex; */
-}
-
-.earImage {
-  position: absolute;
-  height: 33%;
-  width: 16.65%;
-  left: 6.4%;
-  top: 21%;
-  /* overflow: hidden; */
-
-  border: 0rem solid white;
-  background-image: url(e4.png);
 }
 
 #noborder {
