--- a/base.css
+++ b/base.css
@@ -434,7 +434,6 @@ Creates a rectangular container for the boxes
 }
 
 .winner-box {
-
    margin: auto 5%;
    width: 90%;
    height: 30%;
@@ -451,9 +450,38 @@ Creates a rectangular container for the boxes
     height: 30%;
 }
 
+/* sponsors */
+.container-sponsors {
+  width: 65vw;
+  height: 80vh;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  /* border-left: 0.125rem solid black; */
+  /* border-top: 0.125rem solid black; */
+  border: 0.25rem solid black;
+  /* background-color: white; */
+  flex-direction: row;
+}
+
+.s-box {
+    margin-top: 10%;
+    margin-left: 20%;
+    width: 50%;
+    height: 8vw;
+}
+
+.s-box-description {
+  margin-top: 2.5%;
+  font-size: 1.3vw;
+  margin-left: 20%;
+}
+/* sponsors */
+
 .q-box-question {
   font-size: 1.3vw;
-  /* margin-top: auto; */
+  /* margin-top: auto; 
   margin-bottom: .5rem;
 }
 
