--- a/base.css
+++ b/base.css
@@ -759,6 +759,15 @@ Classes for the sponsor section
   }
 }
 
+@media (max-width: 780px) {
+  #sponsor-img-box {
+    width: 27%;
+    height: 10%;
+    top: 0.8%;
+    left: 19%;
+  }
+}
+
 @media (max-width: 600px) {
   h3 {
     font-size: .6rem;
