--- a/base.css
+++ b/base.css
@@ -11,7 +11,7 @@ body {
   overflow-x: hidden;
   color: #151041;
 }
-h1, h2, h3, h4 {
+h1, h2, h3, h4, h5 {
   font-family: 'Nunito', sans-serif;
 }
 
@@ -26,6 +26,10 @@ a {
     text-decoration: none;
     color: #151041;
 
+}
+
+h5 {
+  font-size: 2vw;
 }
 
 h4 {
@@ -506,7 +510,7 @@ Creates a rectangular container for the boxes
 
 #whiteboard-pic {
   height: 70%;
-  width: 80%;
+  max-width: 80%;
   display: block;
   /* margin-top: 20%; */
   margin: 6% auto;
