Reverted to old website

--- a/base.css
+++ b/base.css
@@ -805,10 +805,11 @@ Classes for the sponsor section
   .container {
     width: 80vw;
   }
-
+/*
   .container-plain {
     width: 80vw;
   }
+  */
 
 /* schedule: Monica's section */
   .container-plain-schedule {
