--- a/base.css
+++ b/base.css
@@ -469,6 +469,7 @@ Creates a rectangular container for the boxes
   display: flex;
   margin-left: 0vw;
   height: 100%;
+  width: 100%;
   justify-content: center;
 }
 
@@ -886,6 +887,11 @@ Classes for the sponsor section
   }
 
   #foot-img {
+    width: 0;
+    height: 0;
+  }
+
+  .ear-box {
     width: 0;
     height: 0;
   }
